src/objects/AppLogDetail__c.object
<CustomObject>
    <description>Application Log details for all custom applications developed in Apex</description>
    <fields>
        <fullName>AppLog__c</fullName>
        <label>AppLog</label>
        <referenceTo>AppLog__c</referenceTo>
        <relationshipLabel>AppLogDetails</relationshipLabel>
        <relationshipName>AppLogDetails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LogDetailNumber__c</fullName>
        <description>Detail Log Number. One log entry can be split into multiple line</description>
        <label>LogDetailNumber</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LogType__c</fullName>
        <label>LogType</label>
        <picklist>
            <picklistValues>
                <fullName>Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summary</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RefRecordID__c</fullName>
        <description>Id of the record referenced in this log entry</description>
        <label>RefRecordID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>apexClassName__c</fullName>
        <label>apexClassName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>message__c</fullName>
        <label>message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>AppLogDetail</label>
    <nameField>
        <displayFormat>ALD-{0000000000}</displayFormat>
        <label>AppLogDetail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AppLogDetails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>